production/ingress-services.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-financial-management-ingress-services
  namespace: "development"

spec:
  rules:
  - host: financial.management.test
    http:
      paths:
      - path: /api/transactions
        pathType: Prefix
        backend:
          service:
            name: txn-api-service
            port:
              number: 8081
      - path: /api/balances
        pathType: Prefix
        backend:
          service:
            name: txn-api-service
            port:
              number: 8081
